--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Roboto", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -54,7 +55,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 .text-shadow {
-  text-shadow: 0px 2px 2px #000000;
+  text-shadow: 0px 1px 2px #0a0a0a;
 }
 @media (prefers-color-scheme: light) {
   :root {
